Landing page styling for pwa

--- a/example/pwaLandingPage.html
+++ b/example/pwaLandingPage.html
@@ -4,9 +4,72 @@
 <title>Page Title</title>
 </head>
 <body>
+  <div class="container">
+    <div class="text-center">
+      <img width="300px" src="https://live.congrea.net/mobile/virtualclass/images/congrea.png">
+      <p class="congDiscription">Congrea is an open source online virtual classroom environment. It has been packaged with several value added features such as, audio-video interaction, chat, poll, quiz, collaborative editor and much more. Congrea also enhances the learning experience by allowing the users to share media, documents or even screen with their fellow participants. Its unique feature of getting integrated with other software makes it an easily acceptable and reliable product.</p>
+    </div>
+    <h2>How to use our mobile app</h2>
+    <div class="first">
+      <span><img width="35px" src="https://live.congrea.net/mobile/virtualclass/images/chrome.png"></span>
+      <span>You need to first open your moodle site from your chrome browser</span>
+    </div>
+    <div class="second">
+      <span><img width="35px" src="https://live.congrea.net/mobile/virtualclass/images/webinar.png"></span>
+      <span>Go to your course as you did before and then click join on virtual class room session button</span>
+    </div>
+  </div>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<style>
+
+  * {
+      box-sizing: border-box;
+  }
+
+  body {
+    background-color: #eee;
+    height: 100%;
+    font-family: Helvetica;
+  }
+
+  .container {
+    padding: 30px 20px;
+  }
+
+  .congDiscription {
+    font-size: 18px;
+    font-family: Helvetica;
+    font-weight: 400;
+    line-height: 1.4;
+    color: #4b4b4c;
+    margin: 20px auto;
+  }
+  
+  .text-center {
+    text-align: center;
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .container h2 {
+    font-family: Helvetica;
+    font-weight: 600;
+    color: #444;
+    font-size: 30px;
+  }
+
+  .container .first, .container .second {
+    margin: 4px 10px;
+    display: flex;
+  }
+
+  .container span {
+    font-size: 18px;
+    color: #4b4b4c;
+    line-height: 35px;
+    margin-left: 15px;
+  }
+</style>
 
 </body>
 </html>
