precheck modal styling when running congrea on app

--- a/example/pwaLandingPage.html
+++ b/example/pwaLandingPage.html
@@ -16,7 +16,7 @@
     </div>
     <div class="second">
       <span><img width="35px" src="https://live.congrea.net/virtualclass/images/webinar.png"></span>
-      <span>Go to your course as you did before and then click join on virtual class room session button</span>
+      <span>Go to your course as you did before and then click on join virtual class room session button</span>
     </div>
   </div>
 
